[gd_scene load_steps=11 format=2]

[ext_resource path="res://Battle/Entity/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Battle/Entity/Unit/Unit.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Health Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Battle/Entity/Unit/ChipData.gd" type="Script" id=4]
[ext_resource path="res://Assets/BattleAssets/HUD/chip_icons_exe4.png" type="Texture" id=5]
[ext_resource path="res://Assets/BN4 Rips/Misc/song304_appear.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "default_unit"
length = 0.0166667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:pause_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_unit"
length = 1.06667
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.533333, 0.933333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "move_unit"
length = 0.1
step = 0.0166667
tracks/0/type = "method"
tracks/0/path = NodePath("PaletteAnim")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "move" ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "spawn_unit"
length = 0.666668
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.666667 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "spawn_completed" ],
"method": "emit_signal"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0 )
}
tracks/3/type = "method"
tracks/3/path = NodePath("PaletteAnim")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "spawn" ],
"method": "play"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:pause_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.666668 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Unit" groups=[
"target",
"unit",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="HealthbarHolder" type="Node2D" parent="." index="0"]
z_index = 100

[node name="Healthbar" type="Label" parent="HealthbarHolder" index="0"]
anchor_right = 0.645
margin_left = -9.0
margin_top = -11.0
margin_right = 9.0
margin_bottom = 4.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HealthbarHolder" index="1"]

[node name="AnimationPlayer" parent="." index="2"]
pause_mode = 0
autoplay = "default_unit"
anims/default_unit = SubResource( 1 )
anims/idle_unit = SubResource( 2 )
anims/move_unit = SubResource( 4 )
anims/spawn_unit = SubResource( 5 )

[node name="ChipData" type="Node2D" parent="." index="4"]
visible = false
position = Vector2( 0, -64 )
z_index = 30
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Chip" type="Sprite" parent="ChipData" index="0"]
texture = ExtResource( 5 )
hframes = 30
vframes = 8
frame = 43

[node name="Chip2" type="Sprite" parent="ChipData/Chip" index="0"]
position = Vector2( -2, -2 )
z_index = -1
texture = ExtResource( 5 )
hframes = 30
vframes = 8

[node name="Chip3" type="Sprite" parent="ChipData/Chip/Chip2" index="0"]
position = Vector2( -2, -2 )
z_index = -1
texture = ExtResource( 5 )
hframes = 30
vframes = 8

[node name="Chip4" type="Sprite" parent="ChipData/Chip/Chip2/Chip3" index="0"]
position = Vector2( -2, -2 )
z_index = -1
texture = ExtResource( 5 )
hframes = 30
vframes = 8

[node name="Chip5" type="Sprite" parent="ChipData/Chip/Chip2/Chip3/Chip4" index="0"]
position = Vector2( -2, -2 )
z_index = -1
texture = ExtResource( 5 )
hframes = 30
vframes = 8
